@@ -1,4 +1,5 @@
 0.51 ????-??-??
+-feature: normalize() now decodes unreserved chars and normalizes + to %20 (RFC 3986, 6.2.2.2)
 -feature: TO_JSON() added as alias of to_string()
 -miscellaneous minor efficiency/speed improvements
 
